--- a/ContosoUniversity/Views/Instructor/Edit.cshtml
+++ b/ContosoUniversity/Views/Instructor/Edit.cshtml
@@ -7,10 +7,9 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
-{
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Instructor</h4>
         <hr />
@@ -38,6 +37,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HireDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HireDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OfficeAssignment.Location, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OfficeAssignment.Location, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OfficeAssignment.Location, "", new { @class = "text-danger" })
             </div>
         </div>
 
