--- a/ContosoUniversity/Views/Instructor/Index.cshtml
+++ b/ContosoUniversity/Views/Instructor/Index.cshtml
@@ -12,6 +12,7 @@
         <th>First Name</th>
         <th>Hire Date</th>
         <th>Office</th>
+        <th>Courses</th>
         <th></th>
     </tr>
     @foreach (var item in Model.Instructors) {
@@ -36,13 +37,20 @@
                 }
             </td>
             <td>
+                @{
+                    foreach (var course in item.Courses) {
+                        @course.CourseID @: @course.Title <br />
+             }
+                }
+            </td>
+            <td>
                 @Html.ActionLink("Select", "Index", new { id = item.ID }) |
                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
                 @Html.ActionLink("Details", "Details", new { id = item.ID }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
-    }
+                    }
 </table>
 @if (Model.Courses != null) {
     <h3>Courses Taught by Selected Instructor</h3>
